# geolocator

./: CMakeLists.txt
src/: ApiClient.cpp  ApiClient.hpp  BaseApiClient.cpp  BaseApiClient.hpp  CMakeLists.txt  Geolocation.hpp  GeolocationDialog.qml  GeolocationListModel.cpp  GeolocationListModel.hpp  GeolocationMap.qml  GeolocationRepository.cpp  GeolocationRepository.hpp  GeolocationSerializer.cpp  GeolocationSerializer.hpp  GeolocationTable.qml  Main.qml  SearchBackend.cpp  SearchBackend.hpp  SearchDialog.qml  SettingsBackend.cpp  SettingsBackend.hpp  SettingsDialog.qml  main.cpp
tests/: CMakeLists.txt  GeolocationRepositoryTests.cpp  GeolocationSerializerTests.cpp  SearchBackendTests.cpp  main.cpp
